crates/decman-lib/snapshots/decman_lib__catalog__proposals__rewards__tests__revoke_coupon_reassignment_delegation.snap
---
source: crates/decman-lib/src/catalog/proposals/rewards.rs
expression: "RevokeCouponReassignmentDelegation\n{ delegation: \"00abc\".to_string(), }.to_daml_proto().unwrap()"
---
Value {
    sum: Some(
        Record(
            Record {
                record_id: None,
                fields: [
                    RecordField {
                        label: "delegation",
                        value: Some(
                            Value {
                                sum: Some(
                                    ContractId(
                                        "00abc",
                                    ),
                                ),
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
